src/styles/components/_bar.scss
/*
 * Spreed WebRTC.
 * Copyright (C) 2013-2014 struktur AG
 *
 * This file is part of Spreed WebRTC.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 */

.bar {
  background: $bar-background;
  color: $componentfg1;
  font: bold 1em/50px $font-sans-serif;
  text-align: center;
  touch-callout: none;
  user-select: none;
  z-index: 60;
}

.bar .left {
  padding: 5px 5px 5px 15px;
  .logo {
    background: $logo no-repeat;
    background-size: 100%;
    display: inline-block;
    color: black;
    height: 32px;
    width: 90px;
    font: normal 11px/11px $font-sans-serif;
    text-align: left;
    vertical-align: middle;
    span {
      font-style: italic;
      left: 38px;
      position: relative;
      top: 26px;
    }
    span a {
      color: $bar-logo-text-desc;
    }
    @include breakpt($breakpoint-medium) {
      background: $scalable-logo no-repeat center;
      width: 46px;
      height: 46px;
      span {
        display: none;
      }
    }
  }
  @include breakpt($breakpoint-medium) {
    padding: 2px 5px 0px 11px;
  }
}

.bar .middle {
  position: absolute;
  left: 0px;
  right: 60px;
  top: 0px;
  pointer-events: none;
  text-align: center;

  > span {
    display: inline-block;
    background: $bar-background;
    min-height: 50px;
    pointer-events: auto;
  }

  .userpicture {
    border-radius: 2px;
    display: inline-block;
    width: 46px;
    height: 46px;
    margin: -8px .5em 0 .5em;
    @include breakpt($breakpoint-medium) {
      display: none;
    }
  }

  .status-connected,
  .status-conference,
  .status-connecting,
  .status-closed,
  .status-reconnecting,
  .status-error,
  .status-ringing {
    @include breakpt($breakpoint-medium) {
      max-width: 100%;
      left: 0;
      position: absolute;
      right: 0;
    }
  }
  .status-connecting .actions,
  .status-closed .actions,
  .status-reconnecting .actions,
  .status-error .actions,
  .status-ringing .actions {
  }
}

.bar .right {
  padding-right: 8px;
  .badge {
    background-color: $actioncolor1;
    border: 1px solid white;
    font-size: .4em;
    position: absolute;
    right: 0;
    top: 2px;
  }
  .btn {
    background: $bar-btn-action-normal;
    border-color: $bar-btn-action-normal-border;
    color: $bar-btn-action-color;
    height: 42px;
    font: 24px/40px $font-sans-serif;
    margin-left: -2px;
    padding: 0;
    text-align: center;
    width: 42px;
    position: relative;
    &:focus {
      border: none;
      outline: none;
      box-shadow: 0;
    }
    &:hover {
      background-color: transparent;
      border-color: $bar-btn-action-border;
      color: $bar-btn-action-hover;
    }
    &.active {
      background-color: transparent;
      border-color: $bordercolor;
      color: $bar-btn-action-hover;
    }
    &.active.amutebtn {
      background-color: $bar-btn-action-mute;
      border-color: $bar-btn-action-mute;
      color: white;
    }
    &.active.aenablebtn {
      background-color: $bar-btn-action-enable;
      border-color: $bar-btn-action-enable;
      color: white;
    }
  }
}

@keyframes shakeityeah {
  0% { transform: translate(2px, 1px) rotate(0deg); }
  2% { transform: translate(-1px, -2px) rotate(-1deg); }
  4% { transform: translate(-3px, 0px) rotate(1deg); }
  8% { transform: translate(0px, 2px) rotate(0deg); }
  10% { transform: translate(1px, -1px) rotate(1deg); }
  12% { transform: translate(-1px, 2px) rotate(-1deg); }
  14% { transform: translate(-3px, 1px) rotate(0deg); }
  16% { transform: translate(2px, 1px) rotate(-1deg); }
  18% { transform: translate(-1px, -1px) rotate(1deg); }
  20% { transform: translate(2px, 2px) rotate(0deg); }
  22% { transform: translate(1px, -2px) rotate(-1deg); }
  24% { transform: translate(0px, 0px) rotate(0deg); }
}

.btn-shakeityeah {
  animation-name: shakeityeah;
  animation-duration: 4.0s;
  transform-origin:50% 50%;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}

